// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MultiSelect/> tests should work when no matching results found: Filtered Menu 1`] = `
<div>
  <div
    class="bp3-popover-wrapper main bp3-fill"
  >
    <div
      class="bp3-popover-target bp3-popover-open"
    >
      <div
        class=""
      >
        <div
          class="bp3-input bp3-tag-input bp3-active bp3-multi-select"
        >
          <div
            class="bp3-tag-input-values"
          >
            <input
              class="bp3-input-ghost"
              placeholder="Search..."
              value="junk"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp3-overlay bp3-overlay-open bp3-overlay-inline"
    >
      <div
        class="bp3-transition-container bp3-popover-appear bp3-popover-appear-active"
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      >
        <div
          class="bp3-popover bp3-minimal bp3-multi-select-popover popover"
        >
          <div
            class="bp3-popover-content"
          >
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<MultiSelect/> tests works with async data 1`] = `
<div>
  <div
    class="bp3-popover-wrapper main bp3-fill"
  >
    <div
      class="bp3-popover-target"
    >
      <div
        class=""
      >
        <div
          class="bp3-input bp3-tag-input bp3-multi-select"
        >
          <div
            class="bp3-tag-input-values"
          >
            <input
              class="bp3-input-ghost"
              placeholder="Search..."
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<MultiSelect/> tests works with async data: Final state 1`] = `
<div>
  <div
    class="bp3-popover-wrapper main bp3-fill"
  >
    <div
      class="bp3-popover-target"
    >
      <div
        class=""
      >
        <div
          class="bp3-input bp3-tag-input bp3-active bp3-multi-select"
        >
          <div
            class="bp3-tag-input-values"
          >
            <input
              class="bp3-input-ghost"
              placeholder="Search..."
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<MultiSelect/> tests works with async data: Loading state 1`] = `
<div>
  <div
    class="bp3-popover-wrapper main bp3-fill"
  >
    <div
      class="bp3-popover-target"
    >
      <div
        class=""
      >
        <div
          class="bp3-input bp3-tag-input bp3-active bp3-multi-select"
        >
          <div
            class="bp3-tag-input-values"
          >
            <input
              class="bp3-input-ghost"
              placeholder="Search..."
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<MultiSelect/> tests works with filtering: Filtered Menu 1`] = `
<div>
  <div
    class="bp3-popover-wrapper main bp3-fill"
  >
    <div
      class="bp3-popover-target bp3-popover-open"
    >
      <div
        class=""
      >
        <div
          class="bp3-input bp3-tag-input bp3-active bp3-multi-select"
        >
          <div
            class="bp3-tag-input-values"
          >
            <input
              class="bp3-input-ghost"
              placeholder="Search..."
              value="cha"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp3-overlay bp3-overlay-open bp3-overlay-inline"
    >
      <div
        class="bp3-transition-container bp3-popover-appear bp3-popover-appear-active"
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      >
        <div
          class="bp3-popover bp3-minimal bp3-multi-select-popover popover"
        >
          <div
            class="bp3-popover-content"
          >
            <div>
              <ul
                class="bp3-menu"
              >
                <li
                  class="menuItem active"
                >
                  <input
                    class="checkbox"
                    readonly=""
                    type="checkbox"
                    value="004"
                  />
                  Charmander
                </li>
                <li
                  class="menuItem"
                >
                  <input
                    class="checkbox"
                    readonly=""
                    type="checkbox"
                    value="005"
                  />
                  Charmeleon
                </li>
                <li
                  class="menuItem"
                >
                  <input
                    class="checkbox"
                    readonly=""
                    type="checkbox"
                    value="006"
                  />
                  Charizard
                </li>
                <button
                  class="bp3-button bp3-minimal button font main intent intent-primary with-current-color without-shadow"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-plus main padding padding-right padding-right-xsmall"
                    icon="plus"
                  >
                    <svg
                      data-icon="plus"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        plus
                      </desc>
                      <path
                        d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    cha
                  </span>
                </button>
                <span
                  class="icon-container"
                >
                  <span
                    class="bp3-icon bp3-icon-info-sign main color color-grey400 padding padding-small"
                    icon="info-sign"
                    id="icon-styled-props"
                  >
                    <svg
                      data-icon="info-sign"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        info-sign
                      </desc>
                      <path
                        d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zM7 3h2v2H7V3zm3 10H6v-1h1V7H6V6h3v6h1v1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<MultiSelect/> tests works with static data 1`] = `
<div>
  <div
    class="bp3-popover-wrapper main bp3-fill"
  >
    <div
      class="bp3-popover-target"
    >
      <div
        class=""
      >
        <div
          class="bp3-input bp3-tag-input bp3-multi-select"
        >
          <div
            class="bp3-tag-input-values"
          >
            <input
              class="bp3-input-ghost"
              placeholder="Search..."
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
